src/test/testData/AnnotatorTestData.java
public class Test {
  public static void main(String[] args) {
    System.out.println("bend:website");
    System.out.println("bend:key with spaces");
    System.out.println("bend:<error descr="Unresolved property">websit</error>");
  }
}
